--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+		/>
+		<link
 			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Mystery+Quest&display=swap"
 			rel="stylesheet"
 		/>
